# skill-hub

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  README.zh-CN.md  pyproject.toml
.agents/skills/project-version-update/: SKILL.md
.agents/skills/skill-hub-assistant/: SKILL.md
.agents/skills/version-bump/: SKILL.md
docs/images/: README.md
docs/superpowers/plans/: 2026-04-21-skills-repo-web-ui.md
docs/superpowers/specs/: 2026-03-20-cli-usability-optimization-design.md  2026-04-21-skills-repo-web-ui-design.md
openspec/: project.md
openspec/changes/add-i18n-support/: design.md  proposal.md  tasks.md
openspec/changes/add-i18n-support/specs/cli-i18n/: spec.md
openspec/changes/add-i18n-support/specs/language-configuration/: spec.md
openspec/changes/add-i18n-support/specs/web-i18n/: spec.md
openspec/changes/add-remote-skill-repositories/: design.md  proposal.md  tasks.md
openspec/changes/add-skill-hub-foundation/: design.md  proposal.md  tasks.md
openspec/changes/add-skill-preview-page/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-20-refactor-cli-install-path/: design.md  tasks.md
openspec/changes/refactor-ai-provider-sse/: COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  STATUS.md  design.md  proposal.md  tasks.md
openspec/changes/refactor-cli-install-path/: proposal.md  tasks.md
openspec/changes/refactor-cli-install-path/specs/: multi-layer-skill-directories.md  multi-tool-config-support.md  skill-directory-sync.md
openspec/changes/skill-project-installation/: design.md  proposal.md  tasks.md
openspec/changes/support-agents-skills-standard/: design.md  proposal.md  tasks.md
openspec/changes/support-find-query-delete-global-skills/: design.md  proposal.md  tasks.md
openspec/specs/: multi-layer-skill-directories.md  multi-tool-config-support.md  priority-based-skill-resolution.md  skill-directory-sync.md  skill-installation.md
src/skill_hub/: __init__.py  cli.py  comparison.py  i18n.py  installer.py  models.py  upgrader.py  version.py
src/skill_hub/adapters/: __init__.py  antigravity.py  base.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  opencode.py  qoder.py  registry.py  windsurf.py
src/skill_hub/ai/: __init__.py  finder.py  prompts.py  providers.py  streaming.py  translator.py
src/skill_hub/ai/config/: __init__.py  manager.py
src/skill_hub/ai/providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
src/skill_hub/bilingual/: __init__.py  manager.py
src/skill_hub/discovery/: __init__.py  engine.py
src/skill_hub/remote/: __init__.py  manager.py  scanner.py
src/skill_hub/sync/: __init__.py  engine.py
src/skill_hub/utils/: __init__.py  config_manager.py  path_utils.py  yaml_parser.py
src/skill_hub/web/: __init__.py  api.py  app.py  fastapi_app.py  fastapi_app.py.bak  repos.py  scheduler.py  state.py  streamlit_app.py
src/skill_hub/web/static/: style.css
src/skill_hub/web/templates/: agents.html  config.html  dashboard.html  find.html  global-skills.html  index.html  preview-landing.html  preview.html  repositories.html  skills.html  sync.html
tests/: __init__.py  conftest.py  test_cli.py  test_comparison.py  test_discovery.py  test_installer.py  test_integration_multi_layer.py  test_models.py  test_scheduler.py  test_upgrader.py  test_utils.py  test_version.py  test_web.py
tests/integration/: test_fastapi_sse.py  test_streaming.py
tests/unit/: test_config_manager.py  test_finder.py  test_providers.py  test_shared_skills.py  test_utils.py  test_web.py  test_yaml_parser.py
(+20 files in other folders)
