[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-hub"
version = "0.3.0"
description = "View skills from ~/.agents/skills"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.scripts]
skill-hub = "skill_hub.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
